# RDK-X5-Second-Stage-

./: .gitignore  LICENSE  Lidar Mount.stl  NEXT_STEPS.md  PROPOSAL.md  README.md  ROADMAP.md  webcam_holder_4.stl
.github/workflows/: desktop-installers.yml
Camera_calibration/: calibrate_camera.py  calibration_front.yaml  calibration_left.yaml  calibration_right.yaml  check_calibration.py  collecting_chessboard_images.py  list_cameras.py  test_camera.py
app/agent/: README.md  install_service.sh  navbot-agent.service  requirements.txt  run_agent.sh  ws_probe.py
app/agent/navbot_agent/: __init__.py  __main__.py  app.py  config.py  health.py  launch_manager.py  map_pump.py  protocol.py  ros_bridge.py  server.py  video.py
app/desktop/: README.md
app/desktop/navbot_console/: __init__.py  __main__.py  client.py  main_window.py  teleop.py
app/desktop/navbot_console/widgets/: attitude_panel.py  estop_button.py  health_panel.py  joystick.py  log_panel.py  main_view.py  map_panel.py  map_picker.py  mode_bar.py  model_bar.py  video_panel.py
app/desktop/packaging/: launcher.py  make_icon.py  navbot_console.spec
app/desktop/packaging/linux/: build.sh  install.sh  navbot-console.desktop  uninstall.sh
app/desktop/packaging/windows/: build.ps1  installer.iss
bench_tests/: 01_bus_scan.py  02_mpu6050_test.py  03_tfluna_test.py  04_motor_direction_test.py  05_drive_functions.py  06_obstacle_stop_demo.py  07_goal_navigator_test.py  08_safety_gate_swath_test.py  Readme.md
config/: camera_front.yaml  camera_left.yaml  camera_right.yaml  drive_lut.yaml  fastdds_no_shm.xml
docs/: architecture.md  bom.md  community-share.md  depth_anything_conversion.md  operator_app.md  vio_slam_plan.md
maps/: arena_20260713.data  arena_20260713.pgm  arena_20260713.yaml
scripts/: 02_mpu6050_test.py  03_tfluna_test.py  04_motor_direction_test.py  05_drive_functions.py  06_obstacle_stop_demo.py  07_pidnet_avoid.py  08_yolo_avoid.py  09_hybrid_avoid.py  10_depth_preview.py  11_front_cam_calib.py  12_imu_noise.py  13_cam_imu_offset.py  gen_camera_info.py  test_i2c_sensors.py  tri_cam_grid.py
src/navbot_bringup/: README.md  package.xml  setup.py
src/navbot_bringup/launch/: autonav.launch.py  manual.launch.py  mapping.launch.py  navigation.launch.py
src/navbot_cameras/: README.md  package.xml  setup.cfg  setup.py
src/navbot_cameras/launch/: three_cam.launch.py
src/navbot_drive/: README.md  package.xml  setup.cfg  setup.py
src/navbot_drive/navbot_drive/: dr_odom.py  motor_controller.py  safety_gate.py
src/navbot_msgs/: CMakeLists.txt  README.md  package.xml
src/navbot_msgs/msg/: Detections.msg  GridOverlay.msg  Sectors.msg
src/navbot_navigation/: README.md  package.xml  setup.cfg  setup.py
src/navbot_navigation/navbot_navigation/: goal_navigator.py  local_planner.py
src/navbot_perception/: README.md  package.xml  setup.cfg  setup.py
src/navbot_perception/navbot_perception/: depth_bpu.py  depth_freespace.py  detection_bpu.py  imgproc.py  obstacle_fusion.py  scan_sectors.py  slam_rgbd.py
src/navbot_slam/: README.md  package.xml  setup.cfg  setup.py
src/navbot_slam/config/: amcl.yaml  ekf.yaml  icp_odometry.yaml  slam_toolbox.yaml  slam_toolbox_localization.yaml
src/navbot_slam/launch/: amcl_localization.launch.py  lidar_slam.launch.py  slam.launch.py
src/navbot_slam/navbot_slam/: imu_driver.py
stl_files/: Camera with TF-Luna(1).stl  RDK L298N.stl  RDK battery holder.stl  Single_camera_mount_new.stl  Upgraded battery holder.stl  fan-holder.stl  upgrade_of_mpu_6050.stl  webcam_holder.stl
