<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navbot_slam</name>
  <version>1.0.0</version>
  <description>Visual-inertial SLAM, mapping, kidnap relocalization, and the MPU6050 IMU driver for the RDK X5 Tri-Cam NavBot.</description>
  <maintainer email="muhirwaricardo12@gmail.com">Ricardo Muhirwa</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>navbot_drive</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
